--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[69, 97, 68, 48, 87, 88, 84, 44, 4, 23, 50, 66, 12, 8, 92, 24, 13, 38, 58, 18, 16, 9, 20, 51, 32, 41, 93, 71, 17, 11, 43, 60, 78, 77, 42, 70, 94, 89, 49, 27, 80, 3, 34, 7, 37, 19, 21, 61, 63, 33, 86, 28, 1, 54, 53, 75, 10, 47, 5, 83, 22, 31, 85, 98, 52, 39, 74, 40, 2, 99, 64, 36, 79, 65, 55, 26, 35, 25, 30, 46]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "ref_values = range(0,101)\n",
+    "sample_list_1 = random.sample(ref_values, 80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -77,11 +98,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[81, 55, 73, 52, 95, 40, 90, 24, 88, 36, 59, 47, 93, 20, 43, 24, 54, 25, 62, 68, 15, 53, 16, 3, 17, 35, 80, 35, 28, 20, 35, 49, 3, 27, 32, 9, 11, 5, 60, 45, 83, 12, 91, 83, 53, 73, 50, 98, 36, 76, 25, 19, 4, 44, 16, 60, 38, 91, 99, 50, 4, 79, 13, 86, 84, 59, 60, 45, 44, 6, 87, 2, 33, 83, 51, 79, 71, 27, 65, 38]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for x in range (80):\n",
+    "    sample_list_2.append(random.randrange(0,101,1))\n",
+    "    \n",
+    "\n",
+    "print (sample_list_2)"
    ]
   },
   {
@@ -93,11 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))\n",
+    "\n",
+    "## No, the length is less than 80"
    ]
   },
   {
@@ -109,11 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 7, 8, 10, 18, 21, 22, 23, 26, 30, 31, 34, 37, 39, 41, 42, 46, 48, 58, 61, 63, 64, 66, 69, 70, 74, 75, 77, 78, 85, 89, 92, 94, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 73, 91, 76, 45, 15, 81, 90, 59, 62, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 9, 11, 12, 13, 16, 17, 19, 20, 24, 25, 27, 28, 32, 33, 35, 36, 38, 40, 43, 44, 47, 49, 50, 51, 52, 53, 54, 55, 60, 65, 68, 71, 79, 80, 83, 84, 86, 87, 88, 93, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +253,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1 -  80\n",
+      "set2 -  57\n",
+      "set3 -  34\n",
+      "set4 -  11\n",
+      "set5 -  46\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(\"set1 - \",len(set1))\n",
+    "print(\"set2 - \",len(set2))\n",
+    "print(\"set3 - \",len(set3))\n",
+    "print(\"set4 - \",len(set4))\n",
+    "print(\"set5 - \",len(set5))\n",
+    "\n",
+    "lenset1 = len(set1)\n",
+    "lenset2 = len(set2)\n",
+    "lenset3 = len(set3)\n",
+    "lenset4 = len(set4)\n",
+    "lenset5 = len(set5)\n",
+    "\n",
+    "len(set1)+len(set2) == len(set3)+len(set4)+(len(set5)*2)"
    ]
   },
   {
@@ -181,11 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()\n"
    ]
   },
   {
@@ -197,11 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "len(set6)"
    ]
   },
   {
@@ -213,11 +359,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if set1 == set6:\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
@@ -229,11 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set2.issubset(set1))\n",
+    "\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -247,11 +417,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 58, 59, 60, 61, 62, 63, 64, 65, 66, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 97, 98, 99}\n",
+      "{2, 3, 4, 5, 9, 11, 12, 13, 16, 17, 19, 20, 24, 25, 27, 28, 32, 33, 35, 36, 38, 40, 43, 44, 47, 49, 50, 51, 52, 53, 54, 55, 60, 65, 68, 71, 79, 80, 83, 84, 86, 87, 88, 93, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "setunion1 = setunion1.union(set3 & set4 & set5)\n",
+    "setunion2 = setunion2.union(set1 & set2)\n",
+    "print(setunion1)\n",
+    "print(setunion2)"
    ]
   },
   {
@@ -263,11 +446,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 58, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 74, 75, 77, 78, 79, 80, 83, 84, 85, 86, 87, 88, 89, 92, 93, 94, 97, 98, 99]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "listapop = list(set1)\n",
+    "listapop.pop(0)\n",
+    "\n",
+    "print (listapop)"
    ]
   },
   {
@@ -283,11 +478,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 7, 8, 10, 12, 13, 16, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 58, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 74, 75, 77, 78, 79, 80, 83, 84, 85, 86, 87, 88, 89, 92, 93, 94, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for x in list_to_remove:\n",
+    "    if x in set1:\n",
+    "        lista.remove(x)\n",
+    "print(set1)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -307,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
