--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -28,7 +28,8 @@
    ],
    "source": [
     "tup = \"I\",\n",
-    "print(tup)"
+    "print(tup)\n",
+    "\n"
    ]
   },
   {
@@ -54,7 +55,8 @@
     }
    ],
    "source": [
-    "print(type(tup))"
+    "print(type(tup))\n",
+    "\n"
    ]
   },
   {
@@ -90,7 +92,8 @@
    "source": [
     "tup.append(\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "Las tuplas son inmutables y no se les pueden añadir nuevos elementos"
+    "Las tuplas son inmutables y no se les pueden añadir nuevos elementos\n",
+    "\n"
    ]
   },
   {
@@ -123,7 +126,8 @@
     "tup = \"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"\n",
     "print(tup)\n",
     "\n",
-    "Aquí lo que estamos haciendo es asignar un nuevo valor a la variable tup, el valor de la variable sí se puede modificar"
+    "Aquí lo que estamos haciendo es asignar un nuevo valor a la variable tup, el valor de la variable sí se puede modificar\n",
+    "\n"
    ]
   },
   {
@@ -157,7 +161,8 @@
     "tup1 = tup[0],tup[1],tup[2],tup[3]\n",
     "print(tup1)\n",
     "tup2 = tup[-4],tup[-3],tup[-2],tup[-1]\n",
-    "print(tup2)"
+    "print(tup2)\n",
+    "\n"
    ]
   },
   {
@@ -195,7 +200,8 @@
    "source": [
     "tup3 = tup1+tup2\n",
     "print(tup3)\n",
-    "tup == tup3"
+    "tup == tup3\n",
+    "\n"
    ]
   },
   {
@@ -222,7 +228,8 @@
     }
    ],
    "source": [
-    "len(tup1)+len(tup2) == len(tup3)"
+    "len(tup1)+len(tup2) == len(tup3)\n",
+    "\n"
    ]
   },
   {
@@ -249,7 +256,8 @@
     }
    ],
    "source": [
-    "tup3.index(\"h\")"
+    "tup3.index(\"h\")\n",
+    "\n"
    ]
   },
   {
@@ -290,7 +298,8 @@
     "    if e in tup3:\n",
     "        print(\"True\")\n",
     "    else:\n",
-    "        print(\"False\")\n"
+    "        print(\"False\")\n",
+    "        \n"
    ]
   },
   {
@@ -321,7 +330,8 @@
    ],
    "source": [
     "for e in letters:\n",
-    "    print(tup3.count(e))\n"
+    "    print(tup3.count(e))\n",
+    "    \n"
    ]
   },
   {
