--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[71, 43, 77, 1, 85, 37, 39, 30, 81, 89, 91, 11, 40, 93, 15, 55, 46, 20, 45, 17, 50, 9, 87, 35, 29, 65, 52, 58, 60, 12, 69, 8, 5, 74, 23, 70, 68, 48, 62, 66, 47, 84, 14, 95, 86, 24, 67, 75, 49, 41, 76, 42, 64, 38, 99, 92, 21, 96, 78, 80, 33, 4, 54, 57, 31, 3, 0, 82, 83, 10, 28, 16, 59, 26, 7, 18, 2, 19, 6, 53]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(0,100),80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s1=set(sample_list_1)"
    ]
   },
   {
@@ -77,11 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2=[]\n",
+    "for i in range(80):\n",
+    "    a=random.sample(range(0,100),1)\n",
+    "    sample_list_2.append(a[0])"
    ]
   },
   {
@@ -93,11 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s2=set(sample_list_2)\n",
+    "n=len(s2)\n",
+    "print(n)"
    ]
   },
   {
@@ -109,11 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 8, 9, 10, 14, 15, 16, 17, 20, 24, 26, 31, 33, 35, 39, 40, 41, 49, 52, 54, 57, 58, 64, 66, 69, 70, 71, 74, 76, 78, 82, 83, 87, 89, 91}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s3=s1.difference(s2)\n",
+    "print(s3)"
    ]
   },
   {
@@ -125,11 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 36, 72, 73, 44, 13, 51, 22, 25, 90, 27, 61, 94, 63}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s4=s2.difference(s1)\n",
+    "print(s4)"
    ]
   },
   {
@@ -141,11 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s5=s1.intersection(s2)"
    ]
   },
   {
@@ -181,11 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s6=set()"
    ]
   },
   {
@@ -197,11 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s6.update(s3)\n",
+    "s6.update(s5)"
    ]
   },
   {
@@ -213,11 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRUE\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if s1.difference(s6)==set():\n",
+    "    print(\"TRUE\")"
    ]
   },
   {
@@ -229,11 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "z=s1.issubset(s2)\n",
+    "print(z)\n",
+    "z1=s3.issubset(s1)\n",
+    "print(z1)"
    ]
   },
   {
@@ -247,11 +320,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRUE\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "a=s3.union(s4).union(s5)\n",
+    "b=s1.union(s2)\n",
+    "if a==b:\n",
+    "    print(\"TRUE\")\n",
+    "    \n"
    ]
   },
   {
@@ -263,11 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s1.pop()"
    ]
   },
   {
@@ -283,12 +381,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 15, 16, 17, 18, 20, 23, 24, 26, 28, 30, 33, 35, 37, 38, 40, 42, 43, 45, 46, 47, 48, 50, 52, 53, 54, 55, 57, 58, 60, 62, 64, 65, 66, 67, 68, 70, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 92, 93, 95, 96}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for i in range(len(list_to_remove)):\n",
+    "    if list_to_remove[i] in s1:\n",
+    "        s1.remove(list_to_remove[i])\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
