--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup=(\"I\",)\n"
    ]
   },
   {
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup)"
    ]
   },
   {
@@ -60,7 +61,12 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "\n",
+    "list_tup=list(tup)\n",
+    "list_ronhack=[\"r\",\"o\",\"n\",\"h\",\"a\",\"c\",\"k\"]\n",
+    "for x in list_ronhack:\n",
+    "    for y in x:\n",
+    "        list_tup.append(y)\n",
+    "print(list_tup)\n",
     "# Your explanation here\n"
    ]
   },
@@ -107,7 +113,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1=tupl(a[0:4]\n",
+    "print(tup1)\n",
+    "tup2=tupla[4:8]\n",
+    "print(tup2)"
    ]
   },
   {
@@ -125,7 +135,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3=tup1+tup2\n",
+    "if tup3==tupla:\n",
+    "    print(\"TRUE\")"
    ]
   },
   {
@@ -141,7 +154,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "n1=len(tup1)\n",
+    "n2=len(tup2)\n",
+    "n3=len(tupla)\n",
+    "if n1+n2==n3:\n",
+    "    print(\"TRUE\")"
    ]
   },
   {
@@ -157,7 +175,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "for i in range(len(tup3)):\n",
+    "    if tup3[i]==\"h\":\n",
+    "        print(i)"
    ]
   },
   {
@@ -181,7 +202,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "number=[]\n",
+    "for i in range(len(letters)):\n",
+    "    if letters[i] in tup3:\n",
+    "        print(\"{0} is not in tup3\".format(letters[i]))\n",
+    "        number.append(tup3.count(letters[i]))\n",
+    "    else:\n",
+    "        print(\"{0} is not in tup3\".format(letters[i]))\n",
+    "        number.append(tup3.count(letters[i]))"
    ]
   },
   {
@@ -199,7 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "for i in range(len(letters)):\n",
+    "    print(\"{0} is {1} time in tup3\".format(letters[i], number[i]))"
    ]
   }
  ],
@@ -219,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
