--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +162,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'word_freq' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-70ab84627693>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_freq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"word\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"freq\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'word_freq' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "0            love    25\n",
+      "1    conversation     1\n",
+      "2           every     6\n",
+      "3           we're     1\n",
+      "4           plate     1\n",
+      "5            sour     1\n",
+      "6         jukebox     1\n",
+      "7             now    11\n",
+      "8            taxi     1\n",
+      "9            fast     1\n",
+      "10            bag     1\n",
+      "11            man     1\n",
+      "12           push     3\n",
+      "13           baby    14\n",
+      "14          going     1\n",
+      "15            you    16\n",
+      "16          don't     2\n",
+      "17            one     1\n",
+      "18           mind     2\n",
+      "19       backseat     1\n",
+      "20        friends     1\n",
+      "21           then     3\n",
+      "22           know     2\n",
+      "23           take     1\n",
+      "24           play     1\n",
+      "25           okay     1\n",
+      "26             so     2\n",
+      "27          begin     1\n",
+      "28          start     2\n",
+      "29           over     1\n",
+      "..            ...   ...\n",
+      "110         story     1\n",
+      "111         sweet     1\n",
+      "112          best     1\n",
+      "113         crazy     2\n",
+      "114           let     1\n",
+      "115           too     5\n",
+      "116           van     1\n",
+      "117         shots     1\n",
+      "118            go     2\n",
+      "119            to     2\n",
+      "120             a     8\n",
+      "121            my    33\n",
+      "122            is     5\n",
+      "123         place     1\n",
+      "124          find     1\n",
+      "125         shape     6\n",
+      "126            on    40\n",
+      "127          kiss     1\n",
+      "128          were     3\n",
+      "129         night     3\n",
+      "130         heart     3\n",
+      "131           for     3\n",
+      "132   discovering     6\n",
+      "133     something     6\n",
+      "134            be    16\n",
+      "135     bedsheets     3\n",
+      "136          fill     2\n",
+      "137         hours     2\n",
+      "138          stop     1\n",
+      "139           bar     1\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
      ]
     }
    ],
@@ -194,9 +253,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "120             a     8\n",
+      "109         about     1\n",
+      "43            all     1\n",
+      "96       although     3\n",
+      "72            and    23\n",
+      "34            are     1\n",
+      "102            at     1\n",
+      "13           baby    14\n",
+      "19       backseat     1\n",
+      "10            bag     1\n",
+      "139           bar     1\n",
+      "134            be    16\n",
+      "135     bedsheets     3\n",
+      "27          begin     1\n",
+      "112          best     1\n",
+      "30           body    17\n",
+      "31            boy     2\n",
+      "67          brand     6\n",
+      "52            can     1\n",
+      "63         chance     1\n",
+      "55           club     1\n",
+      "56           come    37\n",
+      "1    conversation     1\n",
+      "113         crazy     2\n",
+      "84          dance     1\n",
+      "90           date     1\n",
+      "95            day     6\n",
+      "132   discovering     6\n",
+      "92             do     3\n",
+      "53          doing     2\n",
+      "..            ...   ...\n",
+      "5            sour     1\n",
+      "28          start     2\n",
+      "138          stop     1\n",
+      "110         story     1\n",
+      "111         sweet     1\n",
+      "75          table     1\n",
+      "23           take     1\n",
+      "105          talk     4\n",
+      "8            taxi     1\n",
+      "36           tell     1\n",
+      "68           that     2\n",
+      "85            the    18\n",
+      "21           then     3\n",
+      "79        thrifty     1\n",
+      "119            to     2\n",
+      "115           too     5\n",
+      "87          trust     1\n",
+      "70             up     3\n",
+      "116           van     1\n",
+      "93          waist     2\n",
+      "99           want     2\n",
+      "81            was     2\n",
+      "33             we     7\n",
+      "3           we're     1\n",
+      "89           week     1\n",
+      "128          were     3\n",
+      "41          where     1\n",
+      "54           with    22\n",
+      "15            you    16\n",
+      "97           your    21\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "df2=df.sort_values(by=[\"word\"])\n",
@@ -212,14 +342,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            word  freq\n",
+      "139          bar     1\n",
+      "114          let     1\n",
+      "116          van     1\n",
+      "60           out     1\n",
+      "57            it     1\n",
+      "117        shots     1\n",
+      "55          club     1\n",
+      "52           can     1\n",
+      "63        chance     1\n",
+      "123        place     1\n",
+      "48         radio     1\n",
+      "46         lover     1\n",
+      "45          make     1\n",
+      "44         isn't     1\n",
+      "43           all     1\n",
+      "42          i'll     1\n",
+      "41         where     1\n",
+      "49          give     1\n",
+      "40           our     1\n",
+      "112         best     1\n",
+      "138         stop     1\n",
+      "102           at     1\n",
+      "90          date     1\n",
+      "89          week     1\n",
+      "88        family     1\n",
+      "87         trust     1\n",
+      "103         hand     1\n",
+      "84         dance     1\n",
+      "111        sweet     1\n",
+      "83          slow     1\n",
+      "..           ...   ...\n",
+      "133    something     6\n",
+      "132  discovering     6\n",
+      "61           new     6\n",
+      "67         brand     6\n",
+      "2          every     6\n",
+      "74            of     6\n",
+      "78             i     6\n",
+      "101         lead     6\n",
+      "95           day     6\n",
+      "64        follow     6\n",
+      "125        shape     6\n",
+      "33            we     7\n",
+      "120            a     8\n",
+      "51          like    10\n",
+      "91            me    10\n",
+      "7            now    11\n",
+      "13          baby    14\n",
+      "15           you    16\n",
+      "134           be    16\n",
+      "30          body    17\n",
+      "85           the    18\n",
+      "97          your    21\n",
+      "54          with    22\n",
+      "50           i'm    23\n",
+      "72           and    23\n",
+      "0           love    25\n",
+      "65            in    27\n",
+      "121           my    33\n",
+      "56          come    37\n",
+      "126           on    40\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "df3=df.sort_values(by=[\"freq\"])\n",
     "print(df3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
