next commit - ex 4

--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -97,29 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sample_file_0.csv', 'sample_file_4.csv', 'sample_file_7.csv', 'sample_file_6.csv', 'sample_file_2.csv', 'sample_file_5.csv', 'sample_file_1.csv', 'sample_file_8.csv', 'sample_file_3.csv', 'sample_file_9.csv']\n",
       "                                              \n",
-      "[array([0.84062117, 0.48006452, 0.7876326 , 0.77109654]), array([0.44409793, 0.09014516, 0.81835917, 0.87645456]), array([0.7066597 , 0.09610873, 0.41247947, 0.57433389]), array([0.29960807, 0.42315023, 0.34452557, 0.4751035 ]), array([0.17003563, 0.46843998, 0.92796258, 0.69814654]), array([0.41290051, 0.19561071, 0.16284783, 0.97016248]), array([0.71725408, 0.87702738, 0.31244595, 0.76615487]), array([0.20754036, 0.57871812, 0.07214068, 0.40356048]), array([0.12149553, 0.53222417, 0.9976855 , 0.12536346]), array([0.80930099, 0.50962849, 0.94555126, 0.33364763])]\n"
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
      ]
     }
    ],
    "source": [
-    "b = [x for x in os.listdir('/home/slimbook/datamad0619/module-1/lab-list-comprehensions/data') if x.endswith('.csv')]\n",
-    "print (b)\n",
+    "#b = [x for x in os.listdir('/home/slimbook/datamad0619/module-1/lab-list-comprehensions/data') if x.endswith('.csv')]\n",
+    "#print (b)\n",
     "\n",
     "print(\"                                              \")\n",
     "\n",
+    "a = np.array([[0.84062117, 0.48006452, 0.7876326 , 0.77109654],\n",
+    "       [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
+    "       [0.7066597 , 0.09610873, 0.41247947, 0.57433389],\n",
+    "       [0.29960807, 0.42315023, 0.34452557, 0.4751035 ],\n",
+    "       [0.17003563, 0.46843998, 0.92796258, 0.69814654],\n",
+    "       [0.41290051, 0.19561071, 0.16284783, 0.97016248],\n",
+    "       [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
+    "       [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
+    "       [0.12149553, 0.53222417, 0.9976855 , 0.12536346],\n",
+    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]])\n",
     "\n",
-    "a3 = []\n",
-    "a2 = [x for x in a if a3.append(x)]\n",
-    "print(list(a3))"
+    "a2 = [y for x in a for y in x]\n",
+    "print(a2)"
    ]
   },
   {
@@ -131,10 +139,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[0.84062117, 0.48006452, 0.7876326 , 0.77109654],\n",
+    "       [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
+    "       [0.7066597 , 0.09610873, 0.41247947, 0.57433389],\n",
+    "       [0.29960807, 0.42315023, 0.34452557, 0.4751035 ],\n",
+    "       [0.17003563, 0.46843998, 0.92796258, 0.69814654],\n",
+    "       [0.41290051, 0.19561071, 0.16284783, 0.97016248],\n",
+    "       [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
+    "       [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
+    "       [0.12149553, 0.53222417, 0.9976855 , 0.12536346],\n",
+    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]])\n",
+    "\n",
+    "a2 = [y for x in a for y in x if y>=0.5]\n",
+    "print(a2)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
