Primer intento list comprehenssions

--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -32,7 +32,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst=[i for i in range(1,51)]\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +49,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst1=[i for i in range(2,201) if i%2==0]\n",
+    "print(lst1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +84,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst2=[y for x in a for y in x]\n",
+    "print(lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +101,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst2=[y for x in a for y in x if y>0.5]\n",
+    "print(lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,7 +140,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst2=[z for x in b for y in x for z in y]\n",
+    "print(lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +157,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst2=[z for x in b for y in x for z in y if z>0.5]\n",
+    "print(lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +174,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "file_lst=[f for f in os.listdir('../data') if f.endswith(\".csv\")]\n",
+    "print(file_lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +195,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_set=[pd.read_csv(os.path.join('../data',f))for f in file_lst]\n",
+    "data=pd.concat(data_set, axis=0)\n",
+    "display(data[0:10])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +213,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "select_columns=[col for col in data._get_numeric_data() if data[col].median()<0.48]\n",
+    "print(select_columns)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +230,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data[\"20\"]=[ i - 0.1 for i in data[\"19\"]]\n",
+    "display(data[0:10])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,7 +247,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data1=[y for x in data for y in data[x] if y<0.75 and y>0.7 ]\n",
+    "display(data)"
+   ]
   }
  ],
  "metadata": {
@@ -231,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
